--- a/MessagesExtension/Scenes/Edit Sticker/EditStickerViewController.storyboard
+++ b/MessagesExtension/Scenes/Edit Sticker/EditStickerViewController.storyboard
@@ -25,33 +25,11 @@
                                             <bool key="isElement" value="YES"/>
                                         </accessibility>
                                     </view>
-                                    <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.10000000149011612" maximumZoomScale="1.1000000238418579" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="C7u-Cq-gUr">
+                                    <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.10000000149011612" maximumZoomScale="1.1000000238418579" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="C7u-Cq-gUr" customClass="ImageScrollView" customModule="MessagesExtension" customModuleProvider="target">
                                         <rect key="frame" x="31" y="31" width="352" height="352"/>
-                                        <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="375" translatesAutoresizingMaskIntoConstraints="NO" id="5dP-bm-Qhu">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
-                                                <accessibility key="accessibilityConfiguration" identifier="StickerImageView">
-                                                    <bool key="isElement" value="YES"/>
-                                                </accessibility>
-                                            </imageView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="5dP-bm-Qhu" firstAttribute="leading" secondItem="C7u-Cq-gUr" secondAttribute="leading" id="TIf-k0-Tu4"/>
-                                            <constraint firstAttribute="trailing" secondItem="5dP-bm-Qhu" secondAttribute="trailing" id="U9Q-KJ-bWr"/>
-                                            <constraint firstItem="5dP-bm-Qhu" firstAttribute="top" secondItem="C7u-Cq-gUr" secondAttribute="top" id="Vpl-Di-Jm9"/>
-                                            <constraint firstAttribute="bottom" secondItem="5dP-bm-Qhu" secondAttribute="bottom" id="W42-qy-5fn"/>
-                                        </constraints>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="alwaysBounceVertical" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="alwaysBounceHorizontal" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="decelerationRate">
-                                                <real key="value" value="0.98999999999999999"/>
-                                            </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="StickerScrollView"/>
                                         </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <outlet property="delegate" destination="eAM-Qd-D3J" id="hL4-WN-eAk"/>
-                                        </connections>
                                     </scrollView>
                                     <view userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iH5-k1-1fD" userLabel="Cover View" customClass="MaskView" customModule="MessagesExtension" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
@@ -196,7 +174,6 @@
                         <outlet property="circleButton" destination="hkP-RL-77I" id="lll-2T-Ykl"/>
                         <outlet property="coverView" destination="iH5-k1-1fD" id="CxB-Mk-cOf"/>
                         <outlet property="deleteButtonItem" destination="FCY-Cz-cME" id="CWG-xg-M1F"/>
-                        <outlet property="imageView" destination="5dP-bm-Qhu" id="P5R-mC-41D"/>
                         <outlet property="multiStarButton" destination="c5R-Uf-FlD" id="Zq6-F6-FSB"/>
                         <outlet property="photosButtonItem" destination="jZj-az-O0R" id="Rg4-be-6Jo"/>
                         <outlet property="rectangleButton" destination="Rjy-iJ-gej" id="9u5-qv-JHA"/>
